# thai

./: .gitignore  CMakeLists.txt  README.md  check.h  const.h  luck.h  utils.h
.github/workflows/: qodana_code_quality.yml
apps/: CMakeLists.txt  demo.cpp  main.cpp
src/: CMakeLists.txt
src/ai/: counterfactual_regret.cpp  counterfactual_regret.hpp  hand_cluster.cpp  hand_cluster.hpp  hand_clusters.hpp  hand_clusters_gpu.py
src/core/: thai_poker.cpp  thai_poker.hpp
src/logic/: combinatorics.cpp  combinatorics.hpp  hand_table.cpp  hand_table.hpp  probability_table.cpp  probability_table.hpp
src/utils/: random.hpp
test/: CMakeLists.txt  test_hand_cluster.cpp  test_probability_table.cpp  test_probability_table.hpp  test_thai_poker_core.cpp
viz/: quick.py  viz.py
